--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     %meta{content: "", name: "description"}
     %meta{content: "", name: "author"}
     %title
-      #{yield(:title)} | Ruby on Rails Tutorial Sample App
+      = full_title(yield(:title))
 
     / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
     /[if lt IE 9]
