--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,6 +1,8 @@
-
-%h1 Sample App
-%p
-  This is the home page for the
-  = link_to 'Ruby on Rails Tutorial', 'http://www.railstutorial.org/'
-  sample application.
+.center.jumbotron
+  %h1 Welcom to the Sample App
+  %p
+    This is the home page for the
+    = link_to 'Ruby on Rails Tutorial', 'http://www.railstutorial.org/'
+    sample application.
+  = link_to "Sign up now!", '#', class: "btn btn-lg btn-primary"
+= image_tag "rails.png", alt: "Rails logo"
